--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
     "crypto-js": "^4.1.1",
+    "expo-server-sdk": "^3.6.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "express-useragent": "^1.0.15",
